# albo-pretorio-audit-delivery

./: .agent.md  .dockerignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  DATA_SCHEMA.md  DEPLOY_GUIDE.md  Dockerfile  ML_ACTIVE_LEARNING.md  README.md  README_UPDATED.md  USAGE_EXAMPLE.md  agentic_cleanup.py  analyze_albo.py  app_control_room.py  apply_corrections.py  daily_run.sh  docker-compose.yml  llm_factory.py  patch_extractor.py  pyproject.toml  rag_chat.py  requirements-lock.txt  requirements.txt  resolve_ambiguous_llm.py  run.py  run_pipeline.py  run_pipeline.sh  test_modifiche.py  update_imports.py  validate_fase0.py  validation_utils.py
albo_download/: albo_metadati.csv
albo_download/report/: feedback_operatore.csv
docs/: Adeguamento Normativo Repository Delibere Comunali (1).txt  report_analisi_tecnica.md
scripts/: analyze_topology.py  build_knowledge_graph.py  daily_run.sh  detect_anomalies.py  explore_albo.py  export_linked_data.py  finance_validator.py  generate_ground_truth.py  procedure.py  randomForest.py  reconcile_semantic.py  run_pipeline.sh  sync_texts.py  test_events.py  test_extraction.py  train_model.py  update_preview.py  validate_ground_truth.py  validate_output.py  visualizza_grafo.py
src/: __init__.py
src/albo_pretorio_audit_delivery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/core/: config.py  extractor.py  metrics.py  scraper.py
src/delibere_comunali/cli/: __main__.py  app_control_room.py  run_pipeline.py  scripts.py
src/delibere_comunali/indexing/: index_builder.py  token_pool.py
src/delibere_comunali/knowledge_graph/: __init__.py  builder.py  exporters.py  models.py
src/delibere_comunali/models/: procedure.py  procedure_builder.py
src/delibere_comunali/parsing/: analyze_albo.py  analyzer.py  enhanced_extractor.py
src/delibere_comunali/patterns/: albo_patterns.py
src/delibere_comunali/processing/: audit_engine.py
src/delibere_comunali/processing/routers/: event_router.py
src/delibere_comunali/rag/: llm_factory.py  online_comprehension_strategy.py  rag_app.py
src/delibere_comunali/scraping/: adapter.py  ingest.py  new_albo_scraper.py
src/delibere_comunali/scraping/adapters/: halley_adapter.py
src/delibere_comunali/utils/: cache.py  config.py  logger.py  metrics.py  p7m.py  schema_validator.py
src/delibere_comunali/web/: __init__.py  rag_chat.py
src/models/: administrative_event.py  procedure.py
src/routers/: event_router.py
src/services/: llm_resolver.py  lod_exporter.py
src/web/: chat.py  dashboard.py  graph_explorer.py
tests/: quick_star.md  test_events.py
